<resources>
    <string name="app_name">covidApp</string>
    <string name="appTitle">COVID-19: Rate and Review</string>
    <string name="startButtonText">Get Started</string>
    <string name="readReviewsButton">Read Reviews</string>
    <string name="submitReviewButton">Submit Review</string>
    <string name="mainPageTitle">Select Your Store</string>
    <string name="storeSearch">Enter store name…</string>
    <string name="returnButtonText">return</string>
    <string name="reviewCountText">Number of reviews: 94</string>
    <string name="radioQuestionOneCount">82%</string>
    <string name="radioQuestionTwoCount">20%</string>
    <string name="storeName">TEMP STORE NAME HERE</string>
    <string name="storeAddress">TEMP ADDRESS HERE</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="safetyText">Did you feel safe?</string>
    <string name="ppeRadioText">Did the staff use PPE?</string>
    <string name="cleanlinessText">How clean was the location?</string>
    <string name="sanitizerRadioText">Did the location offer hand sanitizer?</string>
    <string name="socialDistanceText">Were people socially distanced?</string>
    <string name="returnBtn">RETURN</string>
    <string name="submitBtn">SUBMIT REVIEW</string>
</resources>