<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".ReadActivity">

    <TextView
        android:id="@+id/storeTextView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/storeName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/storeAddress"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/storeTextView"
        app:layout_constraintTop_toBottomOf="@+id/storeTextView" />

    <TextView
        android:id="@+id/reviewCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/reviewCountText"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextView" />

    <TextView
        android:id="@+id/questionOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/ppeRadioText"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewCountTextView" />

    <TextView
        android:id="@+id/ppeRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/radioQuestionOneCount"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/questionOneTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/questionTwoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/sanitizerRadioText"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionOneTextView" />


    <TextView
        android:id="@+id/sanitizerRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/radioQuestionTwoCount"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/questionTwoTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cleanlinessTextView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/cleanlinessText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTwoTextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:progress="32"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FDFDFD"
        android:scaleY="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cleanlinessTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/socialDistanceText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:progress="32"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FDFDFD"
        android:scaleY="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/safetyText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="27dp"
        android:progress="32"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FDFDFD"
        android:scaleY="5"
        app:layout_constraintBottom_toTopOf="@+id/returnBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <Button
        android:id="@+id/returnBtn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/assistant_bold"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/returnBtn"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/submitBtn"
        app:layout_constraintEnd_toStartOf="@+id/submitBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/assistant_bold"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/submitBtn"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/returnBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>