<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".SubmitActivity">

    <TextView
        android:id="@+id/storeName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/storeName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/storeAddress"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/storeName"
        app:layout_constraintTop_toBottomOf="@+id/storeName" />

    <TextView
        android:id="@+id/reviewCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/reviewCountText"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeAddress" />

    <TextView
        android:id="@+id/ppeRadioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/ppeRadioText"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewCountTextView" />

    <CheckBox
        android:id="@+id/ppeRadioBtn"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/ppeRadioText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sanitizerRadioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/sanitizerRadioText"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppeRadioText" />

    <CheckBox
        android:id="@+id/sanitizerRadioBtn"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/sanitizerRadioText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cleanlinessTextView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/cleanlinessText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sanitizerRadioText" />

    <SeekBar
        android:id="@+id/cleanlinessSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:max="10"
        android:progress="5"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cleanlinessTextView" />

    <TextView
        android:id="@+id/socialDistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/socialDistanceText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cleanlinessSeekBar" />

    <SeekBar
        android:id="@+id/socialDistanceSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:max="10"
        android:progress="5"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialDistanceText" />

    <TextView
        android:id="@+id/safetyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/safetyText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialDistanceSeekBar" />

    <SeekBar
        android:id="@+id/safetySeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:max="10"
        android:progress="5"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safetyText" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/assistant_bold"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/returnBtn"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/submitBtn"
        app:layout_constraintEnd_toStartOf="@+id/submitBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/assistant_bold"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/submitBtn"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/returnBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>